# serializer version: 1
# name: test_create_and_retrieve_attachment
  dict({
    'created_at': '2021-06-30T12:00:00+03:00',
    'filename': 'document1.pdf',
    'href': 'http://testserver/v1/documents/5209bdd0-e626-4a7d-aa4d-73aaf961a93f/attachments/1/',
    'media_type': 'application/pdf',
    'size': 12,
    'updated_at': '2021-06-30T12:00:00+03:00',
  })
# ---
# name: test_create_attachment_staff[True]
  dict({
    'created_at': '2021-06-30T12:00:00+03:00',
    'filename': 'document1.pdf',
    'href': 'http://testserver/v1/documents/5209bdd0-e626-4a7d-aa4d-73aaf961a93f/attachments/2/',
    'media_type': 'application/pdf',
    'size': 12,
    'updated_at': '2021-06-30T12:00:00+03:00',
  })
# ---
